--- a/checkout.html
+++ b/checkout.html
@@ -112,7 +112,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/" class="logo" alt=""></a>
                 </div>
                 <!-- End Header Navigation -->
 
@@ -158,22 +158,22 @@
                     <ul class="cart-list">
                         <li>
                             <a href="#" class="photo"><img src="images/img-pro-01.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Delica omtantur </a></h6>
-                            <p>1x - <span class="price">$80.00</span></p>
+                            <h6><a href="#">Beans </a></h6>
+                            <p>1x - <span class="price"></span></p>
                         </li>
                         <li>
                             <a href="#" class="photo"><img src="images/img-pro-02.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Omnes ocurreret</a></h6>
-                            <p>1x - <span class="price">$60.00</span></p>
+                            <h6><a href="#">carrots</a></h6>
+                            <p>1x - <span class="price">ksh60.00</span></p>
                         </li>
                         <li>
                             <a href="#" class="photo"><img src="images/img-pro-03.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Agam facilisis</a></h6>
-                            <p>1x - <span class="price">$40.00</span></p>
+                            <h6><a href="#">cabbage</a></h6>
+                            <p>1x - <span class="price">KSH40.00</span></p>
                         </li>
                         <li class="total">
                             <a href="#" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
-                            <span class="float-right"><strong>Total</strong>: $180.00</span>
+                            <span class="float-right"><strong>Total</strong>: KSH180.00</span>
                         </li>
                     </ul>
                 </li>
@@ -301,7 +301,7 @@
                                     <label for="country">Country *</label>
                                     <select class="wide w-100" id="country">
 									<option value="Choose..." data-display="Select">Choose...</option>
-									<option value="United States">United States</option>
+									<option value="KENYA">KENYA</option>
 								</select>
                                     <div class="invalid-feedback"> Please select a valid country. </div>
                                 </div>
@@ -309,7 +309,7 @@
                                     <label for="state">State *</label>
                                     <select class="wide w-100" id="state">
 									<option data-display="Select">Choose...</option>
-									<option>California</option>
+									<option>NAIROBI</option>
 								</select>
                                     <div class="invalid-feedback"> Please provide a valid state. </div>
                                 </div>
@@ -411,18 +411,18 @@
                                 </div>
                                 <div class="rounded p-2 bg-light">
                                     <div class="media mb-2 border-bottom">
-                                        <div class="media-body"> <a href="detail.html"> Lorem ipsum dolor sit amet</a>
-                                            <div class="small text-muted">Price: $80.00 <span class="mx-2">|</span> Qty: 1 <span class="mx-2">|</span> Subtotal: $80.00</div>
+                                        <div class="media-body"> <a href="detail.html"> Lorem</a>
+                                            <div class="small text-muted">Price: ksh80.00 <span class="mx-2">|</span> Qty: 1 <span class="mx-2">|</span> Subtotal: ksh80.00</div>
                                         </div>
                                     </div>
                                     <div class="media mb-2 border-bottom">
-                                        <div class="media-body"> <a href="detail.html"> Lorem ipsum dolor sit amet</a>
-                                            <div class="small text-muted">Price: $60.00 <span class="mx-2">|</span> Qty: 1 <span class="mx-2">|</span> Subtotal: $60.00</div>
+                                        <div class="media-body"> <a href="detail.html"> Lorem </a>
+                                            <div class="small text-muted">Price: ksh456.00 <span class="mx-2">|</span> Qty: 1 <span class="mx-2">|</span> Subtotal: ksh66.00</div>
                                         </div>
                                     </div>
                                     <div class="media mb-2">
-                                        <div class="media-body"> <a href="detail.html"> Lorem ipsum dolor sit amet</a>
-                                            <div class="small text-muted">Price: $40.00 <span class="mx-2">|</span> Qty: 1 <span class="mx-2">|</span> Subtotal: $40.00</div>
+                                        <div class="media-body"> <a href="detail.html"> Lorem </a>
+                                            <div class="small text-muted">Price: ksh40.00 <span class="mx-2">|</span> Qty: 1 <span class="mx-2">|</span> Subtotal: ksh79.00</div>
                                         </div>
                                     </div>
                                 </div>
@@ -440,20 +440,20 @@
                                 <hr class="my-1">
                                 <div class="d-flex">
                                     <h4>Sub Total</h4>
-                                    <div class="ml-auto font-weight-bold"> $ 440 </div>
+                                    <div class="ml-auto font-weight-bold"> ksh440 </div>
                                 </div>
                                 <div class="d-flex">
                                     <h4>Discount</h4>
-                                    <div class="ml-auto font-weight-bold"> $ 40 </div>
+                                    <div class="ml-auto font-weight-bold"> ksh408 </div>
                                 </div>
                                 <hr class="my-1">
                                 <div class="d-flex">
                                     <h4>Coupon Discount</h4>
-                                    <div class="ml-auto font-weight-bold"> $ 10 </div>
+                                    <div class="ml-auto font-weight-bold"> ksh100 </div>
                                 </div>
                                 <div class="d-flex">
                                     <h4>Tax</h4>
-                                    <div class="ml-auto font-weight-bold"> $ 2 </div>
+                                    <div class="ml-auto font-weight-bold"> ksh20 </div>
                                 </div>
                                 <div class="d-flex">
                                     <h4>Shipping Cost</h4>
@@ -462,7 +462,7 @@
                                 <hr>
                                 <div class="d-flex gr-total">
                                     <h5>Grand Total</h5>
-                                    <div class="ml-auto h5"> $ 388 </div>
+                                    <div class="ml-auto h5"> ksh388 </div>
                                 </div>
                                 <hr> </div>
                         </div>
@@ -572,7 +572,7 @@
 						<div class="footer-top-box">
 							<h3>Business Time</h3>
 							<ul class="list-time">
-								<li>Monday - Friday: 08.00am to 05.00pm</li> <li>Saturday: 10.00am to 08.00pm</li> <li>Sunday: <span>Closed</span></li>
+								<li>Monday - Friday: 08.00am to 05.00pm</li> <li>Sunday: 10.00am to 08.00pm</li> <li>Saturday: <span>Closed</span></li>
 							</ul>
 						</div>
 					</div>
@@ -591,7 +591,7 @@
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="footer-top-box">
 							<h3>Social Media</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<p>Find and connect with us on the following sites</p>
 							<ul>
                                 <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
@@ -608,9 +608,10 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="footer-widget">
-                            <h4>About Freshshop</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p> 							
+                            <h4>About COOLSHAWARA</h4>
+                            <p>At Coolshawara Farms, we’re passionate about bringing the freshest,
+                                highest-quality produce from our fields directly to your table.</p>
+							<p> </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12">
@@ -631,13 +632,13 @@
                             <h4>Contact Us</h4>
                             <ul>
                                 <li>
-                                    <p><i class="fas fa-map-marker-alt"></i>Address: Michael I. Days 3756 <br>Preston Street Wichita,<br> KS 67213 </p>
+                                    <p><i class="fas fa-map-marker-alt"></i>Address:132 69 <br> Kang'undo road Nairobi,<br> KENYA</p>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:+1-888705770">+1-888 705 770</a></p>
+                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:+254 797 584 227">+254 797 584 227</a></p>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-envelope"></i>Email: <a href="mailto:contactinfo@gmail.com">contactinfo@gmail.com</a></p>
+                                    <p><i class="fas fa-envelope"></i>Email: <a href="coolshawarasuppliersltd@gmail.com">coolshawarasuppliersltd@gmail.com</a></p>
                                 </li>
                             </ul>
                         </div>
@@ -650,8 +651,8 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#">ThewayShop</a> Design By :
-            <a href="https://html.design/">html design</a></p>
+        <p class="footer-company">All Rights Reserved. &copy; 2025 <a href="#">COOLSHAWARA</a> Design By :
+            <a href="https://github.com/Randylomo1  ">Randylomo1</a></p>
     </div>
     <!-- End copyright  -->
 
